# hello_tf_c_api

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  NOTICE  README.md  hello_tf.sln  main.cpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
doc/: create_lib_file_from_dll_for_windows.md  optimizing.md  prepare_models.md
hello_tf/: hello_tf.vcxproj
models/: graph_im2im.pb  graph_im2vec.pb
src/: allocate_tensor.cpp  batch_interface.cpp  creat_tensor.cpp  create_string_tensor.cpp  create_tensor.cpp  graph_info.cpp  hello_tf.cpp  hello_tf.vcxproj  image_example.cpp  interface.cpp  load_graph.cpp  main.cpp  opencv_image_file_example.cpp  repeated_inference.cpp  session_run.cpp  target_operation.cpp  tensor_info.cpp  tf_image.cpp  tf_image.hpp  tf_utils.cpp  tf_utils.hpp
tensorflow/lib/: tensorflow.def  tensorflow.exp  tensorflow.lib
tensorflow/windows/include/tensorflow/c/: LICENSE
test/: CMakeLists.txt  test.cpp
tools/: create_example_graph.py
